[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/rubik/Rubik-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/art/onlinevsbg.png" type="Texture" id=2]
[ext_resource path="res://OnlineVsGUI.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/rubik/Rubik-LightItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/rubik/Rubik-Light.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 5 )

[node name="OnlineVsGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1025.0
margin_bottom = 600.0
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1025.0
margin_bottom = 600.0
custom_constants/margin_right = 100
custom_constants/margin_top = 85
custom_constants/margin_left = 100
custom_constants/margin_bottom = 85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 85.0
margin_right = 925.0
margin_bottom = 528.0
custom_constants/separation = 15

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 825.0
margin_bottom = 194.0
custom_constants/vseparation = 10
custom_constants/hseparation = 50
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 274.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "IP Address:"

[node name="IPAddr" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 324.0
margin_right = 442.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
align = 1
expand_to_text_length = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 73.0
margin_right = 274.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 1 )
text = "Port:"

[node name="Port" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 324.0
margin_top = 68.0
margin_right = 442.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
expand_to_text_length = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 141.0
margin_right = 274.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "Delay Frames:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayFrames" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 324.0
margin_top = 136.0
margin_right = 442.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 1 )
expand_to_text_length = true

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 825.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 1 )
text = "Host"

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 825.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 1 )
text = "Join"

[node name="GetIP" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 347.0
margin_right = 825.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 2 )
text = "Get your IPv4"

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 406.0
margin_right = 825.0
margin_bottom = 443.0
custom_fonts/font = SubResource( 3 )
align = 1

[node name="Back" type="Button" parent="."]
anchor_right = 0.033
anchor_bottom = 0.078
margin_left = 101.066
margin_top = 506.148
margin_right = 183.274
margin_bottom = 503.348
custom_fonts/font = SubResource( 4 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPify" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GetIP" to="." method="_on_GetIP_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="IPify" to="." method="_on_IPify_request_completed"]
